[workspace]
resolver = "2"
members = ["bindings/seshat-wasm", "seshat-core"]

[workspace.dependencies]
tantivy = { version = "0.23.0", default-features = false, features = [
    "quickwit",
    # "mmap",
    # "sstable-termdict",
    "zstd-compression",
    # "wasm",
] }
# tantivy = { version = "0.22.0", default-features = false, features = [
#     "wasm-bidgen",
# ] }
# tantivy = { package = "izihawa-tantivy", version = "0.22.6", default-features = false, features = [
#     "quickwit",
#     # "mmap",
#     "sstable-termdict",
#     "zstd-compression",
#     "wasm",
# ] }
# tantivy-common = { package = "izihawa-tantivy-common", version = "0.7" }
# tantivy-query-grammar = { package = "izihawa-tantivy-query-grammar", version = "0.22" }
getrandom = { version = "0.2", default-features = false }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "=0.2.100"
wasm-bindgen-test = "0.3.49"
# wasm-bindgen = { path = "../wasm-bindgen" }
# wasm-bindgen-test = { path = "../wasm-bindgen/crates/test" }
# wasm-bindgen-shared = { path = "../wasm-bindgen/crates/shared" }
# wasm-bindgen-macro-support = { path = "../wasm-bindgen/crates/macro-support" }
# wasm-bindgen-macro = { path = "../wasm-bindgen/crates/macro" }
rusqlite = { git = "https://github.com/Spxg/rusqlite", features = [
    "trace",
    "bundled",
], version = "^0.33.0" } #"0.27.0"
quote = { version = "1.0.38", default-features = false }
tracing-wasm = "0.2.1"
web-sys = "0.3"
js-sys = "0.3"
futures = "0.3.30"
futures-core = "0.3.30"
openssl-sys = { version = "0.9", features = ["vendored"] }
openssl = { version = "0.10", features = ["vendored"] }
libsqlite3-sys = { version = "0.29", features = [
    "bundled-sqlcipher-vendored-openssl",
] }
uuid = "1.3.0"
console_error_panic_hook = "0.1"
wasm_bindgen_spawn = "0.0.1"
sqlite-wasm-rs = { version = ">=0.3.0, <0.4.0", default-features = false, features = [
    "precompiled",
] }

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

# Setting opt-level to 3 for proc macros/build scripts
# speeds up buildtime
[profile.dev.build-override]
opt-level = 3

[patch.crates-io]
# wasm-bindgen = { path = "../wasm-bindgen" }
# wasm-bindgen-test = { path = "../wasm-bindgen/crates/test" }
# wasm-bindgen-shared = { path = "../wasm-bindgen/crates/shared" }
# wasm-bindgen-futures = { path = "../wasm-bindgen/crates/futures" }
# web-sys = { path = "../wasm-bindgen/crates/web-sys" }
# js-sys = { path = "../wasm-bindgen/crates/js-sys" }
# wasm-bindgen-macro = { path = "../wasm-bindgen/crates/macro" }
# wasm-bindgen-macro-support = { path = "../wasm-bindgen/crates/macro-support" }
tantivy = { path = "../tantivy" }
