[workspace]
members = ["seshat-node"]

[workspace.package]
version = "4.0.1"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"
license = "Apache-2.0"

[workspace.dependencies]
seshat = { path = "." }

[package]
name = "seshat"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "A matrix message logger with full text search support"
readme = "README.md"
repository = "https://github.com/matrix-org/seshat/"

[features]
default = ["encryption"]
encryption = ["rusqlite/sqlcipher", "aes", "crypto-mac", "hmac", "sha2",
              "hkdf", "pbkdf2", "rand", "zeroize", "byteorder", "ctr"]
bundled-sqlcipher = ["encryption", "rusqlite/bundled-sqlcipher-vendored-openssl"]

[dependencies]
tantivy = "0.12.0"
rusqlite = "0.31.0"
fs_extra = "1.2.0"
r2d2_sqlite = "0.24.0"
r2d2 = "0.8.9"
lru-cache = "0.1.2"
uuid = { version = "1.3.0", features = ["v4", "serde"] }

aes = { version = "0.8.4", optional = true }
ctr = { version = "0.9.2", optional = true }
crypto-mac = { version = "0.11.1", optional = true }
hmac = { version = "0.11.0", optional = true }
sha2 = { version = "0.9.5", optional = true }
hkdf = { version = "0.11.0", optional = true }
pbkdf2 = { version = "0.8.0", optional = true }
rand = { version = "0.8.5", optional = true }
zeroize = { version = "1.8.1", optional = true }
byteorder = { version = "1.5.0", optional = true }

serde_json = "=1.0.61"

# This is pinned because Tantivy used an serde re-export that turned private in
# 1.0.119.

# Relevant serde commit https://github.com/serde-rs/serde/commit/dd1f4b483ee204d58465064f6e5bf5a457543b54
# Tantivy patch that fixes this issue https://github.com/tantivy-search/tantivy/pull/975
serde = { version = "=1.0.118", default-features = false, features = ["derive"] }
thiserror = "1.0.26"

[dev-dependencies]
tempfile = "3.2.0"
lazy_static = "1.4.0"
fake = "2.4.3"
