[package]
name = "seshat"
version = "4.0.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"
license = "Apache-2.0"
description = "A matrix message logger with full text search support"
readme = "README.md"
repository = "https://github.com/matrix-org/seshat/"

[features]
fs = ["tantivy/mmap"]
# js = ["dep:wasm-bindgen", "dep:web-sys"]
default = ["encryption"]
encryption = [
    "aes",
    "crypto-mac",
    "hmac",
    "sha2",
    "hkdf",
    "pbkdf2",
    "rand",
    "zeroize",
    "byteorder",
    "ctr",
]

[dependencies]
tantivy = { workspace = true }
getrandom = { version = "0.2.9", features = ["js"] }
# tantivy = { package = "izihawa-tantivy", version = "0.22.6" }
tinysegmenter = "0.1.1"
rusqlite = { workspace = true }
fs_extra = "1.2.0"
# r2d2_sqlite = "0.24.0"
# r2d2 = "0.8.9"
lru-cache = "0.1.2"
uuid = { version = "1.3.0", features = ["v4", "serde"] }

aes = { version = "0.8.4", optional = true }
ctr = { version = "0.9.2", optional = true }
crypto-mac = { version = "0.11.1", optional = true }
hmac = { version = "0.11.0", optional = true }
sha2 = { version = "0.9.5", optional = true }
hkdf = { version = "0.11.0", optional = true }
pbkdf2 = { version = "0.8.0", optional = true }
rand = { version = "0.8.5", optional = true }
zeroize = { version = "1.8.1", optional = true }
byteorder = { version = "1.5.0", optional = true }
rayon = "1.10.0"
rayon-core = "1.12.1"
sqlite-wasm-rs.workspace = true
# wasm-bindgen = { version = "0.2.95", default-features = false, optional = true }
# web-sys = { version = "0.3.60", default-features = false, features = [
#     "Document",
#     "DomParser",
#     "HtmlElement",
#     "Node",
#     "NodeList",
#     "SupportedType",
# ], optional = true }

serde_json = "1.0.79"
# serde_json = "=1.0.61"

# This is pinned because Tantivy used an serde re-export that turned private in
# 1.0.119.

# Relevant serde commit https://github.com/serde-rs/serde/commit/dd1f4b483ee204d58465064f6e5bf5a457543b54
# Tantivy patch that fixes this issue https://github.com/tantivy-search/tantivy/pull/975
serde = { version = "1.0.136", default-features = false, features = [
    "derive",
    "std",
] }
# serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
# serde = { version = "=1.0.118", default-features = false, features = [
#     "derive",
# ] }
# thiserror = "1.0.26"
thiserror = "1.0"
wasm-bindgen = { workspace = true, optional = true }

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# libsqlite3-sys = { workspace = true }
# openssl-sys.workspace = true
# openssl.workspace = true

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# getrandom = { workspace = true, features = ["js"] }
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, default-features = false, features = ["console"] }
futures.workspace = true
futures-core.workspace = true
# sqlite-wasm-rs.workspace = true

[dev-dependencies]
tempfile = "3.2.0"
lazy_static = "1.4.0"
fake = "2.4.3"
