[package]
name = "matrix-seshat"
version = "4.0.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
license = "Apache-2.0"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
bundled-sqlcipher = ["seshat/bundled-sqlcipher"]

[dependencies]
fs_extra = "1.3.0"
serde_json = "1.0.61"
neon-serde3 = "0.10.0"
uuid = "1.3.0"
seshat = { path = ".." }

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-4"]
