[package]
name = "matrix-seshat"
version = "4.0.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
exclude = ["artifacts.json", "index.node"]

[lib]
crate-type = ["cdylib"]

[features]
bundled-sqlcipher = ["seshat/bundled-sqlcipher"]

[dependencies]
fs_extra = "1.3.0"
serde_json = "1.0.61"
neon-serde3 = "0.10.0"
uuid = "1.3.0"
seshat.workspace = true

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-4"]
