[package]
name = "seshat-node"
version = "2.2.4"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
license = "Apache-2.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "seshat_node"
crate-type = ["cdylib"]

# We are pinning the exact version of neon since it has a track record of
# introducing breaking changes in patch releases.

[build-dependencies]
neon-build = "=0.4.0"

[dependencies]
neon = "=0.4.0"
fs_extra = "1.2.0"
serde_json = "1.0.58"
neon-serde = "=0.4.0"
uuid = "0.8.1"
seshat = { version = "2.2.4", path = "../../" }
