[package]
name = "seshat-node"
version = "2.2.4"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
license = "Apache-2.0"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "seshat_node"
crate-type = ["cdylib"]

# We are pinning the exact version of neon since it has a track record of
# introducing breaking changes in patch releases.

[dependencies]
fs_extra = "1.2.0"
serde_json = "1.0.58"
neon-serde = { git = "https://github.com/antonok-edm/neon-serde/", rev = "ee44a7e465e8082f7d7e5a7fe2980188930a50cf" }
uuid = "0.8.1"
seshat = { version = "2.2.4", path = "../../" }

[dependencies.neon]
version = "=0.8.2"
default-features = false
features = ["napi-4"]
