[package]
name = "seshat-node"
version = "2.3.3"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
license = "Apache-2.0"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "seshat_node"
crate-type = ["cdylib"]

# We are pinning the exact version of neon since it has a track record of
# introducing breaking changes in patch releases.

[dependencies]
fs_extra = "1.2.0"
serde_json = "1.0.61"
neon-serde2 = "0.8.0"
uuid = "0.8.2"
seshat = "2.3.3"

[dependencies.neon]
version = "0.8.3"
default-features = false
features = ["napi-4"]
